--- a/css/bootstrap-theme.css
+++ b/css/bootstrap-theme.css
@@ -511,11 +511,11 @@ fieldset[disabled] .btn-danger.active {
 }
 
 .progress-bar-success {
-    background-image: -webkit-linear-gradient(top, #4388ff 0%, #449d44 100%);
-    background-image: -o-linear-gradient(top, #4388ff 0%, #449d44 100%);
-    background-image: -webkit-gradient(linear, left top, left bottom, from(#4388ff), to(#449d44));
-    background-image: linear-gradient(to bottom, #4388ff 0%, #449d44 100%);
-    filter: progid: DXImageTransform.Microsoft.gradient(startColorstr='#ff4388ff', endColorstr='#ff449d44', GradientType=0);
+    background-image: -webkit-linear-gradient(top, #4388ff 0%, #4286e7 100%);
+    background-image: -o-linear-gradient(top, #4388ff 0%, #4286e7 100%);
+    background-image: -webkit-gradient(linear, left top, left bottom, from(#4388ff), to(#4286e7));
+    background-image: linear-gradient(to bottom, #4388ff 0%, #4286e7 100%);
+    filter: progid: DXImageTransform.Microsoft.gradient(startColorstr='#ff4388ff', endColorstr='#ff4286e7', GradientType=0);
     background-repeat: repeat-x;
 }
 
@@ -601,10 +601,10 @@ fieldset[disabled] .btn-danger.active {
 }
 
 .panel-success>.panel-heading {
-    background-image: -webkit-linear-gradient(top, #dff0d8 0%, #d0e9c6 100%);
-    background-image: -o-linear-gradient(top, #dff0d8 0%, #d0e9c6 100%);
+    background-image: -webkit-linear-gradient(top, #dff0d8 0%, #c6d6e9 100%);
+    background-image: -o-linear-gradient(top, #dff0d8 0%, #c6d6e9 100%);
     background-image: -webkit-gradient(linear, left top, left bottom, from(#dff0d8), to(#d0e9c6));
-    background-image: linear-gradient(to bottom, #dff0d8 0%, #d0e9c6 100%);
+    background-image: linear-gradient(to bottom, #dff0d8 0%, #c6d6e9 100%);
     filter: progid: DXImageTransform.Microsoft.gradient(startColorstr='#ffdff0d8', endColorstr='#ffd0e9c6', GradientType=0);
     background-repeat: repeat-x;
 }
