--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1697,12 +1697,12 @@ a.text-primary:focus {
 }
 
 .text-success {
-    color: #3c763d;
+    color: #2a9dd6;
 }
 
 a.text-success:hover,
 a.text-success:focus {
-    color: #2b542c;
+    color: #2b3b54;
 }
 
 .text-info {
@@ -3454,29 +3454,29 @@ select[multiple].input-lg {
 .has-success.checkbox label,
 .has-success.radio-inline label,
 .has-success.checkbox-inline label {
-    color: #3c763d;
+    color: #2a9dd6;
 }
 
 .has-success .form-control {
-    border-color: #3c763d;
+    border-color: #2a9dd6;
     -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
     box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
 }
 
 .has-success .form-control:focus {
-    border-color: #2b542c;
+    border-color: #2b3b54;
     -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px #67b168;
     box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px #67b168;
 }
 
 .has-success .input-group-addon {
-    color: #3c763d;
+    color: #2a9dd6;
     background-color: #dff0d8;
-    border-color: #3c763d;
+    border-color: #2a9dd6;
 }
 
 .has-success .form-control-feedback {
-    color: #3c763d;
+    color: #2a9dd6;
 }
 
 .has-warning .help-block,
@@ -3862,22 +3862,22 @@ fieldset[disabled] .btn-primary.focus {
 .btn-success:focus,
 .btn-success.focus {
     color: #fff;
-    background-color: #449d44;
-    border-color: #255625;
+    background-color: #4286e7;
+    border-color: #3e729;
 }
 
 .btn-success:hover {
     color: #fff;
-    background-color: #449d44;
-    border-color: #398439;
+    background-color: #4286e7;
+    border-color: #3dd6e3;
 }
 
 .btn-success:active,
 .btn-success.active,
 .open>.dropdown-toggle.btn-success {
     color: #fff;
-    background-color: #449d44;
-    border-color: #398439;
+    background-color: #4286e7;
+    border-color: #3dd6e3;
 }
 
 .btn-success:active:hover,
@@ -3890,8 +3890,8 @@ fieldset[disabled] .btn-primary.focus {
 .btn-success.active.focus,
 .open>.dropdown-toggle.btn-success.focus {
     color: #fff;
-    background-color: #398439;
-    border-color: #255625;
+    background-color: #3dd6e3;
+    border-color: #3e729d;
 }
 
 .btn-success:active,
@@ -5857,7 +5857,7 @@ a.label:focus {
 
 .label-success[href]:hover,
 .label-success[href]:focus {
-    background-color: #449d44;
+    background-color: #4286e7;
 }
 
 .label-info {
@@ -6061,7 +6061,7 @@ a.thumbnail.active {
 }
 
 .alert-success {
-    color: #3c763d;
+    color: #2a9dd6;
     background-color: #dff0d8;
     border-color: #d6e9c6;
 }
@@ -6071,7 +6071,7 @@ a.thumbnail.active {
 }
 
 .alert-success .alert-link {
-    color: #2b542c;
+    color: #2b3b54;
 }
 
 .alert-info {
@@ -6383,13 +6383,13 @@ button.list-group-item {
 }
 
 .list-group-item-success {
-    color: #3c763d;
-    background-color: #dff0d8;
+    color: #2a9dd6;
+    background-color: #d8e6f0;
 }
 
 a.list-group-item-success,
 button.list-group-item-success {
-    color: #3c763d;
+    color: #2a9dd6;
 }
 
 a.list-group-item-success .list-group-item-heading,
@@ -6401,8 +6401,8 @@ a.list-group-item-success:hover,
 button.list-group-item-success:hover,
 a.list-group-item-success:focus,
 button.list-group-item-success:focus {
-    color: #3c763d;
-    background-color: #d0e9c6;
+    color: #2a9dd6;
+    background-color: #c6e1e9;
 }
 
 a.list-group-item-success.active,
@@ -6412,8 +6412,8 @@ button.list-group-item-success.active:hover,
 a.list-group-item-success.active:focus,
 button.list-group-item-success.active:focus {
     color: #fff;
-    background-color: #3c763d;
-    border-color: #3c763d;
+    background-color: #2a9dd6;
+    border-color: #2a9dd6;
 }
 
 .list-group-item-info {
@@ -6853,7 +6853,7 @@ button.list-group-item-danger.active:focus {
 }
 
 .panel-success>.panel-heading {
-    color: #3c763d;
+    color: #2a9dd6;
     background-color: #dff0d8;
     border-color: #d6e9c6;
 }
@@ -6864,7 +6864,7 @@ button.list-group-item-danger.active:focus {
 
 .panel-success>.panel-heading .badge {
     color: #dff0d8;
-    background-color: #3c763d;
+    background-color: #2a9dd6;
 }
 
 .panel-success>.panel-footer+.panel-collapse>.panel-body {
