--- a/css/bootstrap-theme.css
+++ b/css/bootstrap-theme.css
@@ -603,7 +603,7 @@ fieldset[disabled] .btn-danger.active {
 .panel-success>.panel-heading {
     background-image: -webkit-linear-gradient(top, #dff0d8 0%, #c6d6e9 100%);
     background-image: -o-linear-gradient(top, #dff0d8 0%, #c6d6e9 100%);
-    background-image: -webkit-gradient(linear, left top, left bottom, from(#dff0d8), to(#d0e9c6));
+    background-image: -webkit-gradient(linear, left top, left bottom, from(#d8e2f0), to(#c6dce9));
     background-image: linear-gradient(to bottom, #dff0d8 0%, #c6d6e9 100%);
     filter: progid: DXImageTransform.Microsoft.gradient(startColorstr='#ffdff0d8', endColorstr='#ffd0e9c6', GradientType=0);
     background-repeat: repeat-x;
